--- a/C++/gridModification/CMakeLists.txt
+++ b/C++/gridModification/CMakeLists.txt
@@ -7,7 +7,7 @@ cmake_minimum_required(VERSION 2.8.3)
 
 include_directories(
   # include files
-  ${CMAKE_CURRENT_SOURCE_DIR}/include
+  ${CMAKE_CURRENT_SOURCE_DIR}/../include
   # Eigen linear algebra library
   $ENV{EIGEN_INC}
 
