--- a/C++/gridModification/CMakeLists.txt
+++ b/C++/gridModification/CMakeLists.txt
@@ -24,4 +24,8 @@ if (OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
+find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+
 add_executable(gridMod ${SRCS})
+target_link_libraries (gridMod Eigen3::Eigen)
+
