documentation adn cleanups

--- a/C++/odb2vtk/CMakeLists.txt
+++ b/C++/odb2vtk/CMakeLists.txt
@@ -13,6 +13,8 @@ include_directories(
 
 )
 
+message("variable is $ENV{EIGEN_INC}")
+
 # the list of source files
 set(SRCS
   src/odb2vtk.cpp
@@ -24,4 +26,7 @@ if (OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
+find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+
 add_executable(odb2vtk ${SRCS})
+target_link_libraries (gridMod Eigen3::Eigen)
