--- a/C++/GM_from_CT/CMakeLists.txt
+++ b/C++/GM_from_CT/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SRCS
 )
 
 find_package(OpenMP)
+message(OPENMP_FOUND)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
